Refactor Tree class to enhance email notification system and improve directory/file change tracking by course. Updated methods for sending emails, handling changes, and printing directory structures. Added error handling for cookie loading and file downloading processes.